--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "furigana-maker",
   "displayName": "Furigana Maker",
-  "workspaces": ["website"],
+  "description": "Add furigana to Japanese text on any page for learning kanji pronunciation.",
   "version": "1.5.0",
   "type": "module",
+  "packageManager": "pnpm@9.1.1",
   "private": true,
-  "description": "Add furigana to Japanese text on any page for learning kanji pronunciation.",
   "license": "MIT",
   "author": "aiktb <hey@aiktb.dev>",
+  "homepage": "https://furiganamaker.app",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/aiktb/FuriganaMaker.git"
@@ -24,13 +25,14 @@
     "build:firefox": "plasmo build --target=firefox-mv2",
     "start": "web-ext run --source-dir ./build/chrome-mv3-dev -t chromium --start-url chrome://newtab",
     "start:firefox": "web-ext run --source-dir ./build/firefox-mv2-dev",
-    "package": "bun run build --zip",
-    "package:firefox": "bun run build:firefox --zip",
+    "package": "pnpm run build --zip",
+    "package:firefox": "pnpm run build:firefox --zip",
     "prepare": "husky",
     "format": "biome format --write .",
     "lint": "biome check .",
     "lint:fix": "biome check --apply .",
-    "type-check": "tsc"
+    "type-check": "tsc",
+    "test": "vitest"
   },
   "dependencies": {
     "@ctrl/tinycolor": "^4.0.3",
@@ -41,7 +43,7 @@
     "@sglkc/kuromoji": "^1.1.0",
     "detect-browser": "^5.3.0",
     "file-saver": "^2.0.5",
-    "plasmo": "^0.85.2",
+    "plasmo": "^0.86.3",
     "react": "18.3.0-canary-c5b937576-20231219",
     "react-dom": "18.3.0-canary-c5b937576-20231219",
     "react-share": "^5.1.0",
@@ -55,7 +57,6 @@
     "@headlessui/tailwindcss": "^0.2.0",
     "@iconify/json": "^2.2.197",
     "@tailwindcss/forms": "^0.5.7",
-    "@types/bun": "^1.0.12",
     "@types/file-saver": "^2.0.7",
     "@types/react": "^18.2.74",
     "@types/react-dom": "^18.2.23",
@@ -66,6 +67,7 @@
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.3",
+    "vitest": "^1.6.0",
     "web-ext": "^7.11.0"
   },
   "manifest": {
