chore: update `type-check` command to `typecheck`

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,5 +22,5 @@ jobs:
       - run: pnpm run build
 
       - run: pnpm run lint
-      - run: pnpm run type-check
+      - run: pnpm run typecheck
       - run: pnpm run test
