--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "format": "biome format --write .",
     "lint": "biome check .",
     "lint:fix": "biome check --apply .",
-    "type-check": "tsc",
+    "typecheck": "tsc",
     "test": "vitest"
   },
   "dependencies": {
