--- a/package.json
+++ b/package.json
@@ -35,48 +35,46 @@
     "test": "vitest"
   },
   "dependencies": {
-    "@ctrl/tinycolor": "^4.0.3",
-    "@floating-ui/react": "^0.26.10",
-    "@headlessui/react": "^1.7.18",
+    "@ctrl/tinycolor": "^4.1.0",
+    "@floating-ui/react": "^0.26.17",
+    "@headlessui/react": "^2.0.4",
     "@plasmohq/messaging": "^0.6.2",
-    "@plasmohq/storage": "^1.9.3",
+    "@plasmohq/storage": "^1.10.0",
     "@sglkc/kuromoji": "^1.1.0",
     "detect-browser": "^5.3.0",
     "file-saver": "^2.0.5",
-    "plasmo": "^0.86.3",
+    "plasmo": "^0.87.2",
     "react": "18.3.0-canary-c5b937576-20231219",
     "react-dom": "18.3.0-canary-c5b937576-20231219",
     "react-share": "^5.1.0",
     "wanakana": "^5.3.1",
-    "webextension-polyfill": "^0.11.0",
-    "zod": "^3.23.4"
+    "webextension-polyfill": "^0.12.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.7.0",
+    "@biomejs/biome": "1.8.1",
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
     "@commitlint/types": "^19.0.3",
-    "@egoist/tailwindcss-icons": "^1.7.4",
-    "@headlessui/tailwindcss": "^0.2.0",
-    "@iconify/json": "^2.2.197",
+    "@egoist/tailwindcss-icons": "^1.8.1",
+    "@headlessui/tailwindcss": "^0.2.1",
+    "@iconify/json": "^2.2.219",
     "@tailwindcss/forms": "^0.5.7",
     "@types/file-saver": "^2.0.7",
-    "@types/react": "^18.2.74",
-    "@types/react-dom": "^18.2.23",
-    "@types/webextension-polyfill": "^0.10.0",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@types/webextension-polyfill": "^0.10.7",
     "autoprefixer": "^10.4.19",
     "husky": "^9.0.11",
     "kuromojin": "^3.0.0",
     "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.3",
-    "typescript": "^5.4.3",
+    "tailwindcss": "^3.4.4",
+    "typescript": "^5.4.5",
     "vitest": "^1.6.0",
-    "web-ext": "^7.11.0"
+    "web-ext": "^8.1.0"
   },
   "manifest": {
-    "permissions": [
-      "contextMenus"
-    ],
+    "permissions": ["contextMenus"],
     "commands": {
       "addFurigana": {
         "description": "Add furigana on the current page"
@@ -107,9 +105,7 @@
           "@sglkc/kuromoji/dict/unk_map.dat.gz",
           "@sglkc/kuromoji/dict/unk_pos.dat.gz"
         ],
-        "matches": [
-          "https://*/*"
-        ]
+        "matches": ["https://*/*"]
       }
     ]
   }
