--- a/website/package.json
+++ b/website/package.json
@@ -15,7 +15,9 @@
     "@remix-run/cloudflare": "^2.9.1",
     "@remix-run/cloudflare-pages": "^2.9.1",
     "@remix-run/react": "^2.9.1",
-    "isbot": "^5.1.5"
+    "isbot": "^5.1.5",
+    "react": "18.3.0-canary-c5b937576-20231219",
+    "react-dom": "18.3.0-canary-c5b937576-20231219"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240423.0",
