chore: `--apply` parameter has been deprecated

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "prepare": "husky",
     "format": "biome format --write .",
     "lint": "biome check .",
-    "lint:fix": "biome check --apply .",
+    "lint:fix": "biome check --write .",
     "typecheck": "tsc",
     "test": "vitest"
   },
