feat: support i18n(ja, zh_CN, zh_TW, ko)

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,6 +3,7 @@
     "biomejs.biome",
     "antfu.iconify",
     "bradlc.vscode-tailwindcss",
-    "naumovs.color-highlight"
+    "naumovs.color-highlight",
+    "lokalise.i18n-ally"
   ]
 }
