--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,7 @@
   "editor.codeActionsOnSave": {
     "quickfix.biome": "explicit",
     "source.organizeImports.biome": "explicit"
-  }
+  },
+  "i18n-ally.localesPaths": ["assets/locales", "src/background/messages"],
+  "i18n-ally.keystyle": "nested"
 }
