refactor: reduce the number of icons introduced

--- a/package.json
+++ b/package.json
@@ -60,7 +60,10 @@
     "@commitlint/types": "^19.0.3",
     "@egoist/tailwindcss-icons": "^1.8.1",
     "@headlessui/tailwindcss": "^0.2.1",
-    "@iconify/json": "^2.2.221",
+    "@iconify-json/fa6-brands": "^1.1.19",
+    "@iconify-json/logos": "^1.1.43",
+    "@iconify-json/mdi": "^1.1.67",
+    "@iconify-json/tabler": "^1.1.114",
     "@tailwindcss/forms": "^0.5.7",
     "@types/file-saver": "^2.0.7",
     "@types/react": "^18.3.3",
