--- a/package.json
+++ b/package.json
@@ -55,28 +55,28 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.8.2",
-    "@commitlint/cli": "^19.3.0",
-    "@commitlint/config-conventional": "^19.2.2",
-    "@commitlint/types": "^19.0.3",
-    "@egoist/tailwindcss-icons": "^1.8.1",
-    "@headlessui/tailwindcss": "^0.2.1",
-    "@iconify-json/fa6-brands": "^1.1.19",
-    "@iconify-json/logos": "^1.1.43",
-    "@iconify-json/mdi": "^1.1.67",
-    "@iconify-json/tabler": "^1.1.114",
-    "@tailwindcss/forms": "^0.5.7",
-    "@types/file-saver": "^2.0.7",
+    "@commitlint/cli": "19.3.0",
+    "@commitlint/config-conventional": "19.2.2",
+    "@commitlint/types": "19.0.3",
+    "@egoist/tailwindcss-icons": "1.8.1",
+    "@headlessui/tailwindcss": "0.2.1",
+    "@iconify-json/fa6-brands": "1.1.19",
+    "@iconify-json/logos": "1.1.43",
+    "@iconify-json/mdi": "1.1.67",
+    "@iconify-json/tabler": "1.1.114",
+    "@tailwindcss/forms": "0.5.7",
+    "@types/file-saver": "2.0.7",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@types/webextension-polyfill": "^0.10.7",
-    "autoprefixer": "^10.4.19",
-    "husky": "^9.0.11",
-    "kuromojin": "^3.0.0",
-    "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.4",
-    "typescript": "^5.5.2",
-    "vitest": "^1.6.0",
-    "web-ext": "^8.2.0"
+    "@types/webextension-polyfill": "0.10.7",
+    "autoprefixer": "10.4.19",
+    "husky": "9.0.11",
+    "kuromojin": "3.0.0",
+    "postcss": "8.4.38",
+    "tailwindcss": "3.4.4",
+    "typescript": "5.5.2",
+    "vitest": "1.6.0",
+    "web-ext": "8.2.0"
   },
   "manifest": {
     "permissions": ["contextMenus"],
