--- a/website/package.json
+++ b/website/package.json
@@ -20,15 +20,15 @@
     "react-dom": "18.3.1"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20240620.0",
-    "@fontsource/dm-sans": "^5.0.21",
-    "@fontsource/lobster": "^5.0.20",
-    "@fontsource/m-plus-rounded-1c": "^5.0.13",
-    "@remix-run/css-bundle": "^2.9.2",
-    "@remix-run/dev": "^2.9.2",
-    "@remix-run/node": "^2.9.2",
-    "vite": "^5.3.1",
-    "vite-tsconfig-paths": "^4.3.2",
-    "wrangler": "^3.61.0"
+    "@cloudflare/workers-types": "4.20240620.0",
+    "@fontsource/dm-sans": "5.0.21",
+    "@fontsource/lobster": "5.0.20",
+    "@fontsource/m-plus-rounded-1c": "5.0.13",
+    "@remix-run/css-bundle": "2.9.2",
+    "@remix-run/dev": "2.9.2",
+    "@remix-run/node": "2.9.2",
+    "vite": "5.3.1",
+    "vite-tsconfig-paths": "4.3.2",
+    "wrangler": "3.61.0"
   }
 }
