--- a/package.json
+++ b/package.json
@@ -45,8 +45,8 @@
     "file-saver": "^2.0.5",
     "i18next": "^23.11.5",
     "plasmo": "^0.88.0",
-    "react": "18.3.0-canary-c5b937576-20231219",
-    "react-dom": "18.3.0-canary-c5b937576-20231219",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-i18next": "^14.1.2",
     "react-share": "^5.1.0",
     "wanakana": "^5.3.1",
@@ -66,8 +66,8 @@
     "@iconify-json/tabler": "1.1.114",
     "@tailwindcss/forms": "0.5.7",
     "@types/file-saver": "2.0.7",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
+    "@types/react": "18.3.3",
+    "@types/react-dom": "18.3.0",
     "@types/webextension-polyfill": "0.10.7",
     "autoprefixer": "10.4.19",
     "husky": "9.0.11",
