fix(interim): x.com has no valid rules (#120)
* fix(interim): x.com has no valid rules

* chore: update version

* fix: react need canary version

* chore: uniform preset selector

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "furigana-maker",
   "displayName": "Furigana Maker",
   "description": "__MSG_extDescription__",
-  "version": "1.6.0",
+  "version": "1.6.1",
   "type": "module",
   "packageManager": "pnpm@9.4.0",
   "private": true,
@@ -45,8 +45,8 @@
     "file-saver": "^2.0.5",
     "i18next": "^23.11.5",
     "plasmo": "^0.88.0",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react": "18.3.0-canary-c5b937576-20231219",
+    "react-dom": "18.3.0-canary-c5b937576-20231219",
     "react-i18next": "^14.1.2",
     "react-share": "^5.1.0",
     "wanakana": "^5.3.1",
