--- a/.gitignore
+++ b/.gitignore
@@ -4,13 +4,16 @@
 node_modules
 /.pnp
 .pnp.js
+.output
+stats.html
+stats-*.json
+.wxt
+web-ext.config.ts
+*.tsbuildinfo
+.wrangler
 
 # testing
 /coverage
-
-# misc
-.DS_Store
-*.pem
 
 # debug
 npm-debug.log*
@@ -21,20 +24,14 @@ yarn-error.log*
 # local env files
 .env*.local
 
-out/
-build/
-dist/
-
-# plasmo
-.plasmo
-
-# typescript
-.tsbuildinfo
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+!.vscode/settings.json
 .idea
-
-TODO.md
-tsconfig.tsbuildinfo
-FuriganaMaker.zip
-
-bpp.json
-.wrangler
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
