--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "description": "Add furigana to Japanese text on any page for learning kanji pronunciation.",
   "type": "module",
   "packageManager": "pnpm@9.4.0",
+  "engines": {
+    "node": ">=20.15.0",
+    "pnpm": "^9.4.0"
+  },
   "private": true,
   "license": "MIT",
   "author": "aiktb <hey@aiktb.dev>",
