--- a/package.json
+++ b/package.json
@@ -61,17 +61,17 @@
     "@iconify-json/tabler": "1.1.114",
     "@tailwindcss/forms": "0.5.7",
     "@types/file-saver": "2.0.7",
-    "@types/node": "^20.14.9",
+    "@types/node": "20.14.9",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
-    "@wxt-dev/module-react": "^1.0.0",
+    "@wxt-dev/module-react": "1.0.0",
     "autoprefixer": "10.4.19",
     "husky": "9.0.11",
     "kuromojin": "3.0.0",
     "tailwindcss": "3.4.4",
     "typescript": "5.5.2",
-    "vite-plugin-svgr": "^4.2.0",
+    "vite-plugin-svgr": "4.2.0",
     "vitest": "1.6.0",
-    "wxt": "^0.18.6"
+    "wxt": "0.18.10"
   }
 }
