feat!: new options page layout (#140)
* feat: new options page layout

* feat: add build tool info

* refactor: auto import react and react-router-dom presets

* test: try add e2e

* chore: remove direct dependency on `webextension-polyfill`

* fix: dynamic import of assets fails

* chore: simplified logs

* fix: i18n invalid

* fix: `webext-bridge` calls other than `handleEvent.ts` are invalidated

* fix(style): selected option is not highlighted

* test: add some test

* fix(test): headless mode not work

* build: support for grayscale icons in development mode

* build: enable biome vsc integration

* test: use playwright

* chore: fix ci

* chore: remove puppeteer deps

* chore: fix ci

* build: fix biome bug

* fix!: migration to wxt/storage, invalidate legacy storage

* build: static resource copying and icon generation with WxtModules

* feat: auto add furigana, rely `[lang='ja']`

* test: add popup page e2e test

* fix: theme switcher inaccuracy

* chore: remove useless code

* feat: supplement i18n

* style: adjust link color

--- a/biome.json
+++ b/biome.json
@@ -1,7 +1,10 @@
 {
   "$schema": "https://biomejs.dev/schemas/1.6.4/schema.json",
-  "files": {
-    "ignore": [".wxt", ".output", ".wrangler"]
+  "vcs": {
+    "enabled": true,
+    "clientKind": "git",
+    "useIgnoreFile": true,
+    "defaultBranch": "main"
   },
   "organizeImports": {
     "enabled": true
