--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "furigana-maker",
   "description": "Add furigana to Japanese text on any page for learning kanji pronunciation.",
   "type": "module",
-  "packageManager": "pnpm@9.4.0",
+  "packageManager": "pnpm@9.5.0",
   "engines": {
-    "node": ">=20.15.0",
-    "pnpm": "^9.4.0"
+    "node": ">=20.15.0"
   },
   "private": true,
   "license": "MIT",
@@ -31,21 +30,24 @@
     "lint:fix": "biome check --write .",
     "prepare": "husky",
     "typecheck": "tsc --noEmit",
-    "test": "vitest"
+    "test:unit": "vitest -r __TEST__/unit",
+    "test:e2e": "playwright test"
   },
   "dependencies": {
     "@ctrl/tinycolor": "^4.1.0",
     "@floating-ui/react": "^0.26.17",
     "@headlessui/react": "^2.1.0",
     "@sglkc/kuromoji": "^1.1.0",
+    "@webext-core/messaging": "^1.4.0",
     "file-saver": "^2.0.5",
     "i18next": "^23.11.5",
     "react": "18.3.0-canary-c5b937576-20231219",
     "react-dom": "18.3.0-canary-c5b937576-20231219",
     "react-i18next": "^14.1.2",
+    "react-markdown": "^9.0.1",
+    "react-router-dom": "^6.24.1",
     "react-share": "^5.1.0",
     "wanakana": "^5.3.1",
-    "webext-bridge": "^6.0.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -59,7 +61,10 @@
     "@iconify-json/logos": "1.1.43",
     "@iconify-json/mdi": "1.1.67",
     "@iconify-json/tabler": "1.1.115",
+    "@playwright/test": "^1.45.1",
     "@tailwindcss/forms": "0.5.7",
+    "@tailwindcss/typography": "0.5.13",
+    "@types/chrome": "0.0.268",
     "@types/file-saver": "2.0.7",
     "@types/node": "20.14.9",
     "@types/react": "18.3.3",
@@ -68,6 +73,7 @@
     "autoprefixer": "10.4.19",
     "husky": "9.0.11",
     "kuromojin": "3.0.0",
+    "sharp": "^0.33.4",
     "tailwindcss": "3.4.4",
     "typescript": "5.5.2",
     "vite-plugin-svgr": "4.2.0",
