--- a/package.json
+++ b/package.json
@@ -55,10 +55,8 @@
     "@egoist/tailwindcss-icons": "1.8.1",
     "@headlessui/tailwindcss": "0.2.1",
     "@iconify-json/fa6-brands": "1.1.19",
-    "@iconify-json/logos": "1.1.43",
-    "@iconify-json/mdi": "1.1.67",
     "@iconify-json/tabler": "1.1.115",
-    "@playwright/test": "^1.45.1",
+    "@playwright/test": "1.45.1",
     "@tailwindcss/forms": "0.5.7",
     "@tailwindcss/typography": "0.5.13",
     "@types/chrome": "0.0.268",
