--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "autoprefixer": "10.4.19",
     "husky": "9.0.11",
     "kuromojin": "3.0.0",
-    "sharp": "^0.33.4",
+    "sharp": "0.33.4",
     "tailwindcss": "3.4.4",
     "typescript": "5.5.3",
     "vite-plugin-svgr": "4.2.0",
