--- a/package.json
+++ b/package.json
@@ -32,18 +32,18 @@
   },
   "dependencies": {
     "@ctrl/tinycolor": "^4.1.0",
-    "@floating-ui/react": "^0.26.17",
-    "@headlessui/react": "^2.1.0",
+    "@floating-ui/react": "^0.26.20",
+    "@headlessui/react": "^2.1.2",
     "@js-temporal/polyfill": "^0.4.4",
     "@sglkc/kuromoji": "^1.1.0",
     "@webext-core/messaging": "^1.4.0",
     "file-saver": "^2.0.5",
-    "i18next": "^23.11.5",
+    "i18next": "^23.12.2",
     "react": "18.3.0-canary-c5b937576-20231219",
     "react-dom": "18.3.0-canary-c5b937576-20231219",
     "react-i18next": "^15.0.0",
     "react-markdown": "^9.0.1",
-    "react-router-dom": "^6.24.1",
+    "react-router-dom": "^6.25.1",
     "react-share": "^5.1.0",
     "wanakana": "^5.3.1",
     "zod": "^3.23.8"
@@ -74,6 +74,6 @@
     "typescript": "5.5.4",
     "vite-plugin-svgr": "4.2.0",
     "vitest": "2.0.4",
-    "wxt": "0.18.15"
+    "wxt": "0.19.1-alpha1"
   }
 }
