--- a/package.json
+++ b/package.json
@@ -49,31 +49,31 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.8.3",
-    "@commitlint/cli": "19.3.0",
-    "@commitlint/config-conventional": "19.2.2",
-    "@commitlint/types": "19.0.3",
-    "@egoist/tailwindcss-icons": "1.8.1",
-    "@headlessui/tailwindcss": "0.2.1",
-    "@iconify-json/fa6-brands": "1.1.19",
-    "@iconify-json/tabler": "1.1.115",
-    "@playwright/test": "1.45.3",
-    "@tailwindcss/forms": "0.5.7",
-    "@tailwindcss/typography": "0.5.13",
-    "@types/chrome": "0.0.269",
-    "@types/file-saver": "2.0.7",
-    "@types/node": "20.14.12",
-    "@types/react": "18.3.3",
-    "@types/react-dom": "18.3.0",
-    "@wxt-dev/module-react": "1.1.0",
-    "autoprefixer": "10.4.19",
-    "husky": "9.1.3",
-    "kuromojin": "3.0.0",
-    "sharp": "0.33.4",
-    "tailwindcss": "3.4.7",
-    "typescript": "5.5.4",
-    "vite-plugin-svgr": "4.2.0",
-    "vitest": "2.0.4",
-    "wxt": "0.19.1-alpha1"
+    "@biomejs/biome": "^1.8.3",
+    "@commitlint/cli": "^19.3.0",
+    "@commitlint/config-conventional": "^19.2.2",
+    "@commitlint/types": "^19.0.3",
+    "@egoist/tailwindcss-icons": "^1.8.1",
+    "@headlessui/tailwindcss": "^0.2.1",
+    "@iconify-json/fa6-brands": "^1.1.19",
+    "@iconify-json/tabler": "^1.1.115",
+    "@playwright/test": "^1.45.3",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.13",
+    "@types/chrome": "^0.0.269",
+    "@types/file-saver": "^2.0.7",
+    "@types/node": "^20.14.12",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@wxt-dev/module-react": "^1.1.0",
+    "autoprefixer": "^10.4.19",
+    "husky": "^9.1.3",
+    "kuromojin": "^3.0.0",
+    "sharp": "^0.33.4",
+    "tailwindcss": "^3.4.7",
+    "typescript": "^5.5.4",
+    "vite-plugin-svgr": "^4.2.0",
+    "vitest": "^2.0.4",
+    "wxt": "^0.19.1-alpha1"
   }
 }
