--- a/website/package.json
+++ b/website/package.json
@@ -12,24 +12,29 @@
   },
   "dependencies": {
     "@fireworks-js/react": "^2.10.7",
+    "@headlessui/react": "^2.1.2",
+    "@js-temporal/polyfill": "^0.4.4",
     "@remix-run/cloudflare": "^2.9.2",
     "@remix-run/cloudflare-pages": "^2.9.2",
     "@remix-run/react": "^2.9.2",
     "isbot": "^5.1.9",
-    "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react": "18.3.0-canary-c5b937576-20231219",
+    "react-dom": "18.3.0-canary-c5b937576-20231219"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "4.20240620.0",
-    "@fontsource/dm-sans": "5.0.21",
-    "@fontsource/lobster": "5.0.20",
+    "@cloudflare/workers-types": "^4.20240620.0",
+    "@egoist/tailwindcss-icons": "^1.8.1",
+    "@fontsource/dm-sans": "^5.0.21",
+    "@fontsource/lobster": "^5.0.20",
     "@fontsource/noto-sans-jp": "^5.0.19",
+    "@headlessui/tailwindcss": "^0.2.1",
+    "@iconify-json/fa6-brands": "^1.1.19",
     "@iconify-json/mdi": "^1.1.67",
-    "@remix-run/css-bundle": "2.9.2",
-    "@remix-run/dev": "2.9.2",
-    "@remix-run/node": "2.9.2",
-    "vite": "5.3.5",
-    "vite-tsconfig-paths": "4.3.2",
-    "wrangler": "3.61.0"
+    "@remix-run/css-bundle": "^2.9.2",
+    "@remix-run/dev": "^2.9.2",
+    "@remix-run/node": "^2.9.2",
+    "vite": "^5.3.5",
+    "vite-tsconfig-paths": "^4.3.2",
+    "wrangler": "^3.61.0"
   }
 }
