--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "packageManager": "pnpm@9.9.0",
   "engines": {
-    "node": ">=20.15.0"
+    "node": ">=22.8.0"
   },
   "private": true,
   "license": "MIT",
@@ -62,10 +62,10 @@
     "@tailwindcss/typography": "^0.5.13",
     "@types/chrome": "^0.0.269",
     "@types/file-saver": "^2.0.7",
-    "@types/node": "^20.14.12",
+    "@types/node": "^22.5.3",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@wxt-dev/module-react": "^1.1.0",
+    "@wxt-dev/module-react": "^1.1.1",
     "autoprefixer": "^10.4.19",
     "husky": "^9.1.3",
     "kuromojin": "^3.0.0",
@@ -74,6 +74,6 @@
     "typescript": "^5.5.4",
     "vite-plugin-svgr": "^4.2.0",
     "vitest": "^2.0.4",
-    "wxt": "^0.19.1-alpha1"
+    "wxt": "^0.19.9"
   }
 }
