--- a/package.json
+++ b/package.json
@@ -66,10 +66,10 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@wxt-dev/module-react": "^1.1.1",
+    "@wxt-dev/auto-icons": "^1.0.2",
     "autoprefixer": "^10.4.19",
     "husky": "^9.1.3",
     "kuromojin": "^3.0.0",
-    "sharp": "^0.33.4",
     "tailwindcss": "^3.4.7",
     "typescript": "^5.5.4",
     "vite-plugin-svgr": "^4.2.0",
