--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "./.wxt/tsconfig.json",
-  "exclude": ["__TEST__", "website"],
+  "exclude": ["__TEST__"],
   "compilerOptions": {
     "allowImportingTsExtensions": true,
     "jsx": "react-jsx",
