--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,6 +2,13 @@ name: Lint & TypeCheck & Test
 on:
   workflow_dispatch:
   pull_request:
+    paths-ignore:
+      - '.vscode/**'
+      - '.github/**'
+      - 'LICENSE'
+      - 'renovate.json'
+      - 'CHANGELOG.md'
+      - 'README.md'
   push:
     branches:
       - main
