--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
     "@webext-core/messaging": "^1.4.0",
     "file-saver": "^2.0.5",
     "i18next": "^23.12.2",
-    "react": "18.3.0-canary-c5b937576-20231219",
-    "react-dom": "18.3.0-canary-c5b937576-20231219",
+    "react": "19.0.0-rc-09111202-20241011",
+    "react-dom": "19.0.0-rc-09111202-20241011",
     "react-i18next": "^15.0.0",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.25.1",
