--- a/website/package.json
+++ b/website/package.json
@@ -18,8 +18,8 @@
     "@remix-run/cloudflare-pages": "^2.9.2",
     "@remix-run/react": "^2.9.2",
     "isbot": "^5.1.9",
-    "react": "18.3.0-canary-c5b937576-20231219",
-    "react-dom": "18.3.0-canary-c5b937576-20231219"
+    "react": "19.0.0-rc-09111202-20241011",
+    "react-dom": "19.0.0-rc-09111202-20241011"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240620.0",
@@ -31,7 +31,6 @@
     "@iconify-json/fa6-brands": "^1.1.19",
     "@iconify-json/mdi": "^1.1.67",
     "@remix-run/dev": "^2.9.2",
-    "@remix-run/node": "^2.9.2",
     "vite": "^5.4.6",
     "wrangler": "^3.61.0"
   }
