--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "postinstall": "wxt prepare",
     "format": "biome format --write .",
     "lint": "biome check .",
-    "lint:fix": "biome check --write .",
+    "lint:fix": "biome check --write --unsafe .",
     "prepare": "husky",
     "typecheck": "tsc --noEmit",
     "test:unit": "vitest -r __TEST__/unit",
@@ -49,7 +49,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.9.0",
+    "@biomejs/biome": "1.9.3",
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
     "@commitlint/types": "^19.0.3",
