chore: update author name (#270)

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "private": true,
   "license": "MIT",
   "author": {
-    "name": "Jaguar Zhou",
+    "name": "aiktb",
     "email": "ai.ourship@gmail.com"
   },
   "homepage": "https://furiganamaker.app",
