--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "furigana-maker",
   "description": "Add furigana to Japanese text on any page for learning kanji pronunciation.",
   "type": "module",
-  "packageManager": "pnpm@9.9.0",
+  "packageManager": "pnpm@9.12.3",
   "engines": {
     "node": ">=22.8.0"
   },
@@ -43,8 +43,8 @@
     "file-saver": "^2.0.5",
     "i18next": "^23.12.2",
     "next-themes": "^0.3.0",
-    "react": "19.0.0-rc-09111202-20241011",
-    "react-dom": "19.0.0-rc-09111202-20241011",
+    "react": "19.0.0-rc-fb9a90fa48-20240614",
+    "react-dom": "19.0.0-rc-fb9a90fa48-20240614",
     "react-i18next": "^15.1.0",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.25.1",
@@ -53,7 +53,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.9.3",
+    "@biomejs/biome": "1.9.4",
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
     "@commitlint/types": "^19.0.3",
@@ -64,7 +64,7 @@
     "@playwright/test": "^1.45.3",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.13",
-    "@types/chrome": "^0.0.270",
+    "@types/chrome": "^0.0.279",
     "@types/file-saver": "^2.0.7",
     "@types/node": "^22.5.3",
     "@types/react": "^18.3.3",
