--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "react-dom": "19.0.0-rc-fb9a90fa48-20240614",
     "react-i18next": "^15.1.0",
     "react-markdown": "^9.0.1",
-    "react-router-dom": "^6.25.1",
+    "react-router": "^7.0.1",
     "react-share": "^5.1.0",
     "wanakana": "^5.3.1",
     "zod": "^3.23.8"
