--- a/website/package.json
+++ b/website/package.json
@@ -19,8 +19,8 @@
     "@react-router/fs-routes": "^7.0.1",
     "@react-router/cloudflare": "^7.0.1",
     "isbot": "^5.1.9",
-    "react": "19.0.0-rc-09111202-20241011",
-    "react-dom": "19.0.0-rc-09111202-20241011",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-router": "^7.0.1"
   },
   "devDependencies": {
