--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -49,7 +49,7 @@ jobs:
             ## Download
             - [Chrome](https://chromewebstore.google.com/detail/furigana-maker/heodojceeinbkfjfilnfminlkgbacpfp)
         run: |
-         gh release upload ${{ needs.release-please.outputs.tag_name }} ./.output/*.zip
+         gh release upload ${{ needs.release-please.outputs.tag_name }} ./packages/extension/.output/*.zip
          gh release edit ${{ needs.release-please.outputs.tag_name }} --notes "$RELEASE_NOTES"
       - name: Submit to stores
         run: |
