--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -53,7 +53,7 @@ jobs:
          gh release edit ${{ needs.release-please.outputs.tag_name }} --notes "$RELEASE_NOTES"
       - name: Submit to stores
         run: |
-          pnpm --filter extension wxt submit \
+          pnpm --filter extension exec wxt submit \
             --chrome-zip ./packages/extension/.output/*-chrome.zip \
         env:
           CHROME_EXTENSION_ID: ${{ secrets.CHROME_EXTENSION_ID }}
