--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -43,8 +43,8 @@
     "@types/file-saver": "^2.0.7",
     "@types/react": "catalog:",
     "@types/react-dom": "catalog:",
+    "@vitejs/plugin-react-swc": "^3.7.2",
     "@wxt-dev/auto-icons": "^1.0.2",
-    "@wxt-dev/module-react": "^1.1.3",
     "autoprefixer": "catalog:",
     "kuromojin": "^3.0.0",
     "tailwindcss": "catalog:",
