refactor: upgrade to wxt@0.20.0, and use `src` dir (#327)
* refactor: upgrade to wxt@0.20.0, and use `src` dir

* fix: vscode i18n-a11y extension not work

* chore: update to wxt 20 beta

* chore: fix cloudflare page

* chore: correct repository and issue URLs in configuration files

* chore: update node version in .nvmrc and package manager in package.json

* chore: upgrade to wxt@0.20.6

* fix: typecheck failure

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "furigana-maker",
   "description": "Add furigana to Japanese text on any page for learning kanji pronunciation.",
   "type": "module",
-  "packageManager": "pnpm@10.3.0",
+  "packageManager": "pnpm@10.11.0",
   "engines": {
     "node": ">=22.0.0"
   },
@@ -15,10 +15,10 @@
   "homepage": "https://furiganamaker.app",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/aiktb/FuriganaMaker.git"
+    "url": "git+https://github.com/aiktb/furiganamaker.git"
   },
   "bugs": {
-    "url": "https://github.com/aiktb/FuriganaMaker/issues"
+    "url": "https://github.com/aiktb/furiganamaker/issues"
   },
   "scripts": {
     "format": "biome format --write .",
