--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -39,12 +39,12 @@
     "@playwright/test": "^1.49.1",
     "@tailwindcss/forms": "catalog:",
     "@tailwindcss/typography": "catalog:",
+    "@tailwindcss/vite": "catalog:",
     "@types/file-saver": "^2.0.7",
     "@types/react": "catalog:",
     "@types/react-dom": "catalog:",
     "@vitejs/plugin-react-swc": "^3.7.2",
     "@wxt-dev/auto-icons": "^1.0.2",
-    "autoprefixer": "catalog:",
     "kuromojin": "^3.0.0",
     "tailwindcss": "catalog:",
     "vite-plugin-svgr": "^4.3.0",
