--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -2,21 +2,21 @@ packages:
  - packages/*
 
 catalog:
-    "@egoist/tailwindcss-icons": "^1.8.2"
+    "@egoist/tailwindcss-icons": "^1.9.0"
     "@iconify-json/fa6-brands": "^1.2.5"
-    "@headlessui/react": "^2.2.0"
-    "@headlessui/tailwindcss": "^0.2.1"
+    "@headlessui/react": "^2.2.3"
+    "@headlessui/tailwindcss": "^0.2.2"
     "@js-temporal/polyfill": "^0.4.4"
     "@react-router/cloudflare": "^7.1.0"
     "@react-router/dev": "^7.1.0"
     "@react-router/fs-routes": "^7.1.0"
     "@tailwindcss/forms": "^0.5.9"
-    "@tailwindcss/typography": "^0.5.15"
+    "@tailwindcss/typography": "^0.5.16"
+    "@tailwindcss/vite": "^4.1.7"
     "@types/react": "^19.0.1"
     "@types/react-dom": "^19.0.2"
-    "autoprefixer": "^10.4.20"
     "react": "^19.0.0"
     "react-dom": "^19.0.0"
     "react-router": "^7.1.0"
-    "tailwindcss": "^3.4.17"
-    "vite": "^6.0.5"
+    "tailwindcss": "^4.1.7"
+    "vite": "^6.3.5"
